--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -4,6 +4,9 @@ metadata:
   name: "pjkubo-c34e"
 spec:
   replicas: 2
+   selector:
+    matchLabels:
+      app: "pjkubo-c34e"
   template:
     metadata:
       labels:
